maybe fixed enemy clipping through collision by extending all canvases beyond the visible screen by one blocksize in each direction

--- a/overworld/src/components/BasicRender/BasicRender.css
+++ b/overworld/src/components/BasicRender/BasicRender.css
@@ -21,8 +21,8 @@
   padding: 0px;
   /* padding-top: -1px; */
   overflow: hidden;
-  width: fit-content;
-  height: fit-content;
+  width: 100%;
+  height: 100%;
   cursor: none;
   /* animation: canvas_scale 10s ease-in-out; */
   transform-origin: center;
@@ -224,22 +224,22 @@
   bottom: 0;
   right: 0;
   image-rendering: pixelated;
-  width: fit-content;
-  height: fit-content;
-  z-index: -9;
+  /* width: fit-content;
+  height: fit-content; */
+  z-index: -39;
   /* animation: scale-background 16s ease-in-out; */
-  transform-origin: center;
+  /* transform-origin: center; */
 }
 
 #comboCanvas {
-  position: absolute;
-  top: 0;
-  left: 0;
+  position: fixed;
+  /* top: -64;
+  left: -64;
   bottom: 0;
-  right: 0;
+  right: 0; */
   image-rendering: pixelated;
-  width: fit-content;
-  height: fit-content;
+  /* width: fit-content;
+  height: fit-content; */
   z-index: 29;
   /* animation: scale-background 16s ease-in-out; */
   transform-origin: center;
